feat: update dashboard components, i18n translations, and add arabic locale

--- a/src/i18n/locales/ch/translation.json
+++ b/src/i18n/locales/ch/translation.json
@@ -1,5 +1,282 @@
 {
   "welcome": "欢迎",
   "language": "语言",
-  "play": "播放"
+  "play": "播放",
+  "Login successful": "登录成功",
+  "Login failed": "登录失败",
+  "Sign In": "登录",
+  "Username": "用户名",
+  "Username is required": "用户名为必填项",
+  "Password": "密码",
+  "Password is required": "密码为必填项",
+  "Remember Me": "记住我",
+  "Need Help?": "需要帮助？",
+  "Don't have an account?": "还没有账号？",
+  "Sign Up": "注册",
+  "This page is protected by Google reCAPTCHA to ensure you're not a bot.": "此页面受 Google reCAPTCHA 保护，以确保您不是机器人。",
+  "Registration successful": "注册成功",
+  "Registration failed": "注册失败",
+  "Email": "电子邮箱",
+  "Confirm Password": "确认密码",
+  "Do you have an account?": "已有账号？",
+  "Sort by": "排序方式",
+  "Are you sure you want to send the data?": "您确定要发送数据吗？",
+  "Cacel": "取消",
+  "Comment": "评论",
+  "Edited": "已编辑",
+  "Reply": "回复",
+  "Your browser does not support.": "您的浏览器不支持。",
+  "peuse": "暂停",
+  "Watch on YouTube": "在 YouTube 上观看",
+  "Share": "分享",
+  "Save": "保存",
+  "Followers": "关注者",
+  "Replies": "回复数",
+  "No replies": "没有回复",
+  "User": "用户",
+  "edited": "已修改",
+  "School activity": "学校活动",
+  "Watch Now": "立即观看",
+  "More Info": "更多信息",
+  "This Week's Videos": "本周视频",
+  "View More": "查看更多",
+  "Guided Reading": "引导阅读",
+  "Unit Videos": "单元视频",
+  "Full Videos": "完整视频",
+  "Health News": "健康新闻",
+  "DA AI TV": "大爱电视",
+  "Enter your email": "输入您的电子邮箱",
+  "Join us today! Enter your email to access weekly updated content, available in multiple languages, with the latest news and interactive programs.": "今天就加入我们！输入您的电子邮箱即可访问每周更新的内容，提供多种语言，包含最新新闻和互动节目。",
+  "What do you want to learn?": "您想学习什么？",
+  "Confirm PDF Download": "确认下载 PDF",
+  "The downloaded file will contain only records with status": "下载的文件将仅包含状态为",
+  "Delivered": "已送达",
+  "Start Date": "开始日期",
+  "End Date": "结束日期",
+  "Are you sure you want to download the PDF file?": "您确定要下载 PDF 文件吗？",
+  "Cancel": "取消",
+  "Download": "下载",
+  "Show less": "收起",
+  "SHOW MORE": "展开更多",
+  "Not available": "不可用",
+  "Home": "首页",
+  "Videos": "视频",
+  "Cards & Photos": "卡片和照片",
+  "Connect": "联系",
+  "About Us": "关于我们",
+  "Explore inspirational stories, picture cards, and photo albums that connect hearts across the world": "探索励志故事、图片卡片和相册，连接世界各地的心灵。",
+  "Updated Profile Successfuly": "个人资料更新成功",
+  "Field Updated Profile": "个人资料更新失败",
+  "Profile": "个人资料",
+  "Archives": "档案",
+  "Interactions": "互动",
+  "Update Profile": "更新资料",
+  "Edit Profile": "编辑资料",
+  "Change Password": "修改密码",
+  "Save Password": "保存密码",
+  "Add Watchlist": "加入关注列表",
+  "Weak password": "密碼強度：弱",
+  "Moderate password": "密碼強度：中等",
+  "Strong password": "密碼強度：強",
+  "Very strong password": "密碼強度：非常強",
+  "Minimum 8 characters long-the more, the better": "至少 8 個字元，越長越好",
+  "At least one lowercase character": "至少包含一個小寫字母",
+  "At least one uppercase character": "至少包含一個大寫字母",
+  "At least one number, symbol, or whitespace": "至少包含一個數字、符號或空格",
+  "Current password is required": "必須輸入當前密碼",
+  "New password is required": "必須輸入新密碼",
+  "Re-type password is required": "必須再次輸入密碼",
+  "Passwords do not match": "兩次輸入的密碼不一致",
+  "Password changed successfully!": "密碼已成功更改！",
+  "Current password": "當前密碼",
+  "New password": "新密碼",
+  "Must be 8 characters or more": "必須至少 8 個字元",
+  "Password must contain at least one special character.": "密碼必須至少包含一個特殊字元。",
+  "Must contain at least one uppercase letter": "必須至少包含一個大寫字母",
+  "Must contain at least one lowercase letter": "必須至少包含一個小寫字母",
+  "Re-type password": "再次輸入密碼",
+  "Saving...": "正在儲存...",
+  "forgot password ?": "忘記密碼？",
+  "Reset Password": "重設密碼",
+  "Please enter your email to reset your password.": "請輸入您的電子郵件以重設密碼。",
+  "Email Address": "電子郵件地址",
+  "Email is required": "必須輸入電子郵件",
+  "Reset link sent to your email.": "重設連結已發送到您的電子郵件。",
+  "Sending...": "正在發送...",
+  "Send": "發送",
+  "Close": "關閉",
+  "Notifications": "通知",
+  "No notifications": "沒有通知",
+  "View all notifications": "查看所有通知",
+  "{{count}} unread": "{{count}} 未讀",
+  "8+ characters": "8 個以上字元",
+  "Number": "數字",
+  "Uppercase letter": "大寫字母",
+  "Lowercase letter": "小寫字母",
+  "Security level": "安全等級",
+  "allEarnings": "所有收益",
+  "documents": "文件",
+  "news": "新聞",
+  "time.thisWeek": "本週",
+  "posts": "文章",
+  "Title is required": "標題為必填",
+  "Subtitle is required": "副標題為必填",
+  "Excerpt is required": "摘要為必填",
+  "Writer is required": "作者為必填",
+  "Category is required": "分類為必填",
+  "Post updated successfully": "文章更新成功",
+  "Post created successfully": "文章建立成功",
+  "An error occurred while saving the post": "儲存文章時發生錯誤",
+  "Edit Post": "編輯文章",
+  "Create New Post": "建立新文章",
+  "Title": "標題",
+  "Enter post title": "輸入文章標題",
+  "Subtitle": "副標題",
+  "Enter post subtitle": "輸入文章副標題",
+  "Category": "分類",
+  "Select Category": "選擇分類",
+  "Status": "狀態",
+  "Active Post": "啟用文章",
+  "Writer": "作者",
+  "Select Writer": "選擇作者",
+  "Tags": "標籤",
+  "Type a tag and press Enter": "輸入標籤並按 Enter",
+  "Excerpt": "摘要",
+  "Enter post excerpt or summary": "輸入文章摘要或簡介",
+  "Approximately": "大約",
+  "minute(s) read": "分鐘閱讀",
+  "Update Post": "更新文章",
+  "Create Post": "建立文章",
+  "Edit post": "編輯文章",
+  "Post deleted successfully": "文章刪除成功",
+  "An error occurred while deleting the post": "刪除文章時發生錯誤",
+  "Posts List": "文章清單",
+  "Loading": "載入中",
+  "Total": "總計",
+  "Add New Post": "新增文章",
+  "ID": "編號",
+  "Views": "瀏覽數",
+  "Actions": "操作",
+  "Active": "啟用",
+  "Inactive": "停用",
+  "View Details": "查看詳細",
+  "Edit": "編輯",
+  "Delete": "刪除",
+  "Showing": "顯示",
+  "to": "至",
+  "of": "的",
+  "Previous": "上一頁",
+  "Next": "下一頁",
+  "Post Details": "文章詳情",
+  "Confirm Deletion": "確認刪除",
+  "Delete Post": "刪除文章",
+  "Are you sure you want to delete this post? This action cannot be undone.": "確定要刪除此文章嗎？此操作無法復原。",
+  "Post to be deleted": "要刪除的文章",
+  "Deleting...": "刪除中...",
+  "By": "由",
+  "Statistics": "統計",
+  "Active Status": "啟用狀態",
+  "Minutes": "分鐘",
+  "Metadata": "中繼資料",
+  "Post ID": "文章編號",
+  "Created Date": "建立日期",
+  "Last Updated": "最後更新",
+  "Author": "作者",
+  "Read Time": "閱讀時間",
+  "Not specified": "未指定",
+  "Type is required": "類型為必填",
+  "Language is required": "語言為必填",
+  "Video URL is required": "影片連結為必填",
+  "Please enter a valid YouTube URL": "請輸入有效的 YouTube 連結",
+  "Duration is required": "時長為必填",
+  "Video updated successfully": "影片更新成功",
+  "Video created successfully": "影片建立成功",
+  "An error occurred while saving the video": "儲存影片時發生錯誤",
+  "Edit Video": "編輯影片",
+  "Create New Video": "建立新影片",
+  "Video Thumbnail": "影片縮圖",
+  "Upload Image": "上傳圖片",
+  "Recommended: 16:9 aspect ratio": "建議：16:9 長寬比",
+  "Enter video title": "輸入影片標題",
+  "Type": "類型",
+  "Select Type": "選擇類型",
+  "Subject": "主題",
+  "Select Subject": "選擇主題",
+  "Video Number": "影片編號",
+  "Enter video number (optional)": "輸入影片編號（選填）",
+  "Language": "語言",
+  "Select Language": "選擇語言",
+  "Duration": "時長",
+  "e.g., 1h 28min or 15:30": "例如：1小時28分 或 15:30",
+  "YouTube URL": "YouTube 連結",
+  "Featured Video": "精選影片",
+  "Mark as New": "標記為新",
+  "Update Video": "更新影片",
+  "Create Video": "建立影片",
+  "This action cannot be undone. This will permanently delete the selected item.": "此操作無法復原，將永久刪除所選項目。",
+  "Item to be deleted": "要刪除的項目",
+  "Warning": "警告",
+  "This action is permanent and cannot be reversed.": "此操作為永久性，無法復原。",
+  "Additional Information": "附加資訊",
+  "Published": "已發佈",
+  "Video URL": "影片連結",
+  "New Video": "新影片",
+  "Video deleted successfully": "影片刪除成功",
+  "An error occurred while deleting the video": "刪除影片時發生錯誤",
+  "Videos List": "影片清單",
+  "videos": "影片",
+  "Add New": "新增",
+  "Featured": "精選",
+  "New": "新",
+  "Video Details": "影片詳情",
+  "Delete Video": "刪除影片",
+  "Are you sure you want to delete this video? This action cannot be undone.": "確定要刪除此影片嗎？此操作無法復原。",
+  "Notifications_one": "1 則通知",
+  "Notifications_other": "通知",
+  "{{count}} unread_one": "{{count}} 則未讀",
+  "{{count}} unread_other": "{{count}} 則未讀",
+  "Posts Management": "文章管理",
+  "Manage your blog posts, articles, and content publications.": "管理您的部落格文章、文章與內容發佈。",
+  "Video Management": "影片管理",
+  "Manage your video library, create new content, and organize your media collection.": "管理您的影片庫、建立新內容並組織您的媒體收藏。",
+  "help": "幫助",
+  "logout": "登出",
+  "home": "首頁",
+  "read": "閱讀",
+  "team": "團隊",
+  "refunds": "退款",
+  "declines": "拒絕",
+  "payouts": "付款",
+  "allPosts": "所有文章",
+  "addPost": "新增文章",
+  "allVideos": "所有影片",
+  "addVideo": "新增影片",
+  "settings": "設定",
+  "profile": "個人資料",
+  "view All": "查看全部",
+  "content": "內容",
+  "id": "編號",
+  "client": "客戶",
+  "date/time": "日期/時間",
+  "status": "狀態",
+  "action": "操作",
+  "view": "查看",
+  "edit": "編輯",
+  "delete": "刪除",
+  "websites List": "網站清單",
+  "Latest Posts": "最新文章",
+  "Help": "幫助",
+  "Logout": "登出",
+  "Read": "閱讀",
+  "Team": "團隊",
+  "Refunds": "退款",
+  "Declines": "拒絕",
+  "Payouts": "付款",
+  "Posts": "文章",
+  "All Posts": "所有文章",
+  "Add Post": "新增文章",
+  "All Videos": "所有影片",
+  "Add Video": "新增影片",
+  "MAIN": "主要",
+  "Settings": "設定"
 }
