--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,4 +1,283 @@
 {
   "welcome": "Welcome",
-  "language": "Language"
+  "language": "Language",
+  "Login successful": "Login successful",
+  "Login failed": "Login failed",
+  "Sign In": "Sign In",
+  "Username": "Username",
+  "Username is required": "Username is required",
+  "Password": "Password",
+  "Password is required": "Password is required",
+  "Remember Me": "Remember Me",
+  "Need Help?": "Need Help?",
+  "Don't have an account?": "Don't have an account?",
+  "Sign Up": "Sign Up",
+  "This page is protected by Google reCAPTCHA to ensure you're not a bot.": "This page is protected by Google reCAPTCHA to ensure you're not a bot.",
+  "Registration successful": "Registration successful",
+  "Registration failed": "Registration failed",
+  "Email": "Email",
+  "Confirm Password": "Confirm Password",
+  "Do you have an account?": "Do you have an account?",
+  "Sort by": "Sort by",
+  "Are you sure you want to send the data?": "Are you sure you want to send the data?",
+  "Cacel": "Cancel",
+  "Comment": "Comment",
+  "Edited": "Edited",
+  "Reply": "Reply",
+  "Your browser does not support.": "Your browser does not support this feature.",
+  "peuse": "Pause",
+  "play": "Play",
+  "Watch on YouTube": "Watch on YouTube",
+  "Share": "Share",
+  "Save": "Save",
+  "Followers": "Followers",
+  "Replies": "Replies",
+  "No replies": "No replies",
+  "User": "User",
+  "edited": "edited",
+  "School activity": "School activity",
+  "Watch Now": "Watch Now",
+  "More Info": "More Info",
+  "This Week's Videos": "This Week's Videos",
+  "View More": "View More",
+  "Guided Reading": "Guided Reading",
+  "Unit Videos": "Unit Videos",
+  "Full Videos": "Full Videos",
+  "Health News": "Health News",
+  "DA AI TV": "DA AI TV",
+  "Enter your email": "Enter your email",
+  "Join us today! Enter your email to access weekly updated content, available in multiple languages, with the latest news and interactive programs.": "Join us today! Enter your email to access weekly updated content, available in multiple languages, with the latest news and interactive programs.",
+  "What do you want to learn?": "What do you want to learn?",
+  "Confirm PDF Download": "Confirm PDF Download",
+  "The downloaded file will contain only records with status": "The downloaded file will contain only records with status",
+  "Delivered": "Delivered",
+  "Pending": "Pending",
+  "Canceled": "Canceled",
+  "Start Date": "Start Date",
+  "End Date": "End Date",
+  "Are you sure you want to download the PDF file?": "Are you sure you want to download the PDF file?",
+  "Cancel": "Cancel",
+  "Download": "Download",
+  "Show less": "Show less",
+  "SHOW MORE": "SHOW MORE",
+  "Not available": "Not available",
+  "Home": "Home",
+  "Videos": "Videos",
+  "Cards & Photos": "Cards & Photos",
+  "Connect": "Connect",
+  "About Us": "About Us",
+  "Explore inspirational stories, picture cards, and photo albums that connect hearts across the world": "Explore inspirational stories, picture cards, and photo albums that connect hearts across the world",
+  "Updated Profile Successfuly": "Profile updated successfully",
+  "Field Updated Profile": "Profile update failed",
+  "Profile": "Profile",
+  "Archives": "Archives",
+  "Interactions": "Interactions",
+  "Update Profile": "Update Profile",
+  "Edit Profile": "Edit Profile",
+  "Change Password": "Change Password",
+  "Save Password": "Save Password",
+  "Add Watchlist": "Add to Watchlist",
+  "Weak password": "Weak password",
+  "Moderate password": "Moderate password",
+  "Strong password": "Strong password",
+  "Very strong password": "Very strong password",
+  "Minimum 8 characters long-the more, the better": "Minimum 8 characters long-the more, the better",
+  "At least one lowercase character": "At least one lowercase character",
+  "At least one uppercase character": "At least one uppercase character",
+  "At least one number, symbol, or whitespace": "At least one number, symbol, or whitespace",
+  "Current password is required": "Current password is required",
+  "New password is required": "New password is required",
+  "Re-type password is required": "Re-type password is required",
+  "Passwords do not match": "Passwords do not match",
+  "Password changed successfully!": "Password changed successfully!",
+  "Current password": "Current password",
+  "New password": "New password",
+  "Must be 8 characters or more": "Must be 8 characters or more",
+  "Password must contain at least one special character.": "Password must contain at least one special character.",
+  "Must contain at least one uppercase letter": "Must contain at least one uppercase letter",
+  "Must contain at least one lowercase letter": "Must contain at least one lowercase letter",
+  "Re-type password": "Re-type password",
+  "Saving...": "Saving...",
+  "forgot password ?": "forgot password ?",
+  "Reset Password": "Reset Password",
+  "Please enter your email to reset your password.": "Please enter your email to reset your password.",
+  "Email Address": "Email Address",
+  "Email is required": "Email is required",
+  "Reset link sent to your email.": "Reset link sent to your email.",
+  "Sending...": "Sending...",
+  "Send": "Send",
+  "Close": "Close",
+  "Notifications": "Notifications",
+  "No notifications": "No notifications",
+  "View all notifications": "View all notifications",
+  "{{count}} unread": "{{count}} unread",
+  "8+ characters": "8+ characters",
+  "Number": "Number",
+  "Uppercase letter": "Uppercase letter",
+  "Lowercase letter": "Lowercase letter",
+  "Security level": "Security level",
+  "allEarnings": "allEarnings",
+  "documents": "documents",
+  "news": "news",
+  "time.thisWeek": "time.thisWeek",
+  "posts": "posts",
+  "Title is required": "Title is required",
+  "Subtitle is required": "Subtitle is required",
+  "Excerpt is required": "Excerpt is required",
+  "Writer is required": "Writer is required",
+  "Category is required": "Category is required",
+  "Post updated successfully": "Post updated successfully",
+  "Post created successfully": "Post created successfully",
+  "An error occurred while saving the post": "An error occurred while saving the post",
+  "Edit Post": "Edit Post",
+  "Create New Post": "Create New Post",
+  "Title": "Title",
+  "Enter post title": "Enter post title",
+  "Subtitle": "Subtitle",
+  "Enter post subtitle": "Enter post subtitle",
+  "Category": "Category",
+  "Select Category": "Select Category",
+  "Status": "Status",
+  "Active Post": "Active Post",
+  "Writer": "Writer",
+  "Select Writer": "Select Writer",
+  "Tags": "Tags",
+  "Type a tag and press Enter": "Type a tag and press Enter",
+  "Excerpt": "Excerpt",
+  "Enter post excerpt or summary": "Enter post excerpt or summary",
+  "Approximately": "Approximately",
+  "minute(s) read": "minute(s) read",
+  "Update Post": "Update Post",
+  "Create Post": "Create Post",
+  "Edit post": "Edit post",
+  "Post deleted successfully": "Post deleted successfully",
+  "An error occurred while deleting the post": "An error occurred while deleting the post",
+  "Posts List": "Posts List",
+  "Loading": "Loading",
+  "Total": "Total",
+  "Add New Post": "Add New Post",
+  "ID": "ID",
+  "Views": "Views",
+  "Actions": "Actions",
+  "Active": "Active",
+  "Inactive": "Inactive",
+  "View Details": "View Details",
+  "Edit": "Edit",
+  "Delete": "Delete",
+  "Showing": "Showing",
+  "to": "to",
+  "of": "of",
+  "Previous": "Previous",
+  "Next": "Next",
+  "Post Details": "Post Details",
+  "Confirm Deletion": "Confirm Deletion",
+  "Delete Post": "Delete Post",
+  "Are you sure you want to delete this post? This action cannot be undone.": "Are you sure you want to delete this post? This action cannot be undone.",
+  "Post to be deleted": "Post to be deleted",
+  "Deleting...": "Deleting...",
+  "By": "By",
+  "Statistics": "Statistics",
+  "Active Status": "Active Status",
+  "Minutes": "Minutes",
+  "Metadata": "Metadata",
+  "Post ID": "Post ID",
+  "Created Date": "Created Date",
+  "Last Updated": "Last Updated",
+  "Author": "Author",
+  "Read Time": "Read Time",
+  "Not specified": "Not specified",
+  "Type is required": "Type is required",
+  "Language is required": "Language is required",
+  "Video URL is required": "Video URL is required",
+  "Please enter a valid YouTube URL": "Please enter a valid YouTube URL",
+  "Duration is required": "Duration is required",
+  "Video updated successfully": "Video updated successfully",
+  "Video created successfully": "Video created successfully",
+  "An error occurred while saving the video": "An error occurred while saving the video",
+  "Edit Video": "Edit Video",
+  "Create New Video": "Create New Video",
+  "Video Thumbnail": "Video Thumbnail",
+  "Upload Image": "Upload Image",
+  "Recommended: 16:9 aspect ratio": "Recommended: 16:9 aspect ratio",
+  "Enter video title": "Enter video title",
+  "Type": "Type",
+  "Select Type": "Select Type",
+  "Subject": "Subject",
+  "Select Subject": "Select Subject",
+  "Video Number": "Video Number",
+  "Enter video number (optional)": "Enter video number (optional)",
+  "Language": "Language",
+  "Select Language": "Select Language",
+  "Duration": "Duration",
+  "e.g., 1h 28min or 15:30": "e.g., 1h 28min or 15:30",
+  "YouTube URL": "YouTube URL",
+  "Featured Video": "Featured Video",
+  "Mark as New": "Mark as New",
+  "Update Video": "Update Video",
+  "Create Video": "Create Video",
+  "This action cannot be undone. This will permanently delete the selected item.": "This action cannot be undone. This will permanently delete the selected item.",
+  "Item to be deleted": "Item to be deleted",
+  "Warning": "Warning",
+  "This action is permanent and cannot be reversed.": "This action is permanent and cannot be reversed.",
+  "Additional Information": "Additional Information",
+  "Published": "Published",
+  "Video URL": "Video URL",
+  "New Video": "New Video",
+  "Video deleted successfully": "Video deleted successfully",
+  "An error occurred while deleting the video": "An error occurred while deleting the video",
+  "Videos List": "Videos List",
+  "videos": "videos",
+  "Add New": "Add New",
+  "Featured": "Featured",
+  "New": "New",
+  "Video Details": "Video Details",
+  "Delete Video": "Delete Video",
+  "Are you sure you want to delete this video? This action cannot be undone.": "Are you sure you want to delete this video? This action cannot be undone.",
+  "Notifications_one": "Notifications",
+  "Notifications_other": "Notifications",
+  "{{count}} unread_one": "{{count}} unread",
+  "{{count}} unread_other": "{{count}} unread",
+  "Posts Management": "Posts Management",
+  "Manage your blog posts, articles, and content publications.": "Manage your blog posts, articles, and content publications.",
+  "Video Management": "Video Management",
+  "Manage your video library, create new content, and organize your media collection.": "Manage your video library, create new content, and organize your media collection.",
+  "help": "help",
+  "logout": "logout",
+  "home": "home",
+  "read": "read",
+  "team": "team",
+  "refunds": "refunds",
+  "declines": "declines",
+  "payouts": "payouts",
+  "allPosts": "allPosts",
+  "addPost": "addPost",
+  "allVideos": "allVideos",
+  "addVideo": "addVideo",
+  "settings": "settings",
+  "profile": "profile",
+  "view All": "view All",
+  "content": "content",
+  "id": "id",
+  "client": "client",
+  "date/time": "date/time",
+  "status": "status",
+  "action": "action",
+  "view": "view",
+  "edit": "edit",
+  "delete": "delete",
+  "websites List": "websites List",
+  "Latest Posts": "Latest Posts",
+  "Help": "Help",
+  "Logout": "Logout",
+  "Read": "Read",
+  "Team": "Team",
+  "Refunds": "Refunds",
+  "Declines": "Declines",
+  "Payouts": "Payouts",
+  "Posts": "Posts",
+  "All Posts": "All Posts",
+  "Add Post": "Add Post",
+  "All Videos": "All Videos",
+  "Add Video": "Add Video",
+  "Settings": "Settings"
 }
