feat(i18n): add Turkish (tr) translations and update i18n configs

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -279,5 +279,6 @@
   "Add Post": "Add Post",
   "All Videos": "All Videos",
   "Add Video": "Add Video",
-  "Settings": "Settings"
+  "Settings": "Settings",
+  "MAIN": "MAIN"
 }
