feat: update home components, i18n translations, and add ScrollToTop component

--- a/src/i18n/locales/ar/translation.json
+++ b/src/i18n/locales/ar/translation.json
@@ -1,6 +1,7 @@
 {
   "welcome": "مرحبا",
   "language": "اللغة",
+  "English": "الإنجليزية",
   "Login successful": "تسجيل الدخول ناجح",
   "Login failed": "فشل تسجيل الدخول",
   "Sign In": "تسجيل الدخول",
@@ -299,5 +300,126 @@
   "All Videos": "جميع الفيديوهات",
   "Add Video": "إضافة فيديو",
   "MAIN": "الرئيسية",
-  "Settings": "الإعدادات"
+  "Settings": "الإعدادات",
+  "Company History": "تاريخ الشركة",
+  "Manage your company's historical events and milestones": "إدارة الأحداث والمعالم التاريخية لشركتك",
+  "events": "الأحداث",
+  "Add New Event": "إضافة حدث جديد",
+  "No Historical Events": "لا توجد أحداث تاريخية",
+  "Start by adding your first event in the company's history": "ابدأ بإضافة أول حدث في تاريخ الشركة",
+  "Add Your First Event": "أضف أول حدث",
+  "No Results Found": "لم يتم العثور على نتائج",
+  "No results found for": "لم يتم العثور على نتائج لـ",
+  "Clear Search": "مسح البحث",
+  "Image and Title": "الصورة والعنوان",
+  "Time Period": "الفترة الزمنية",
+  "Description": "الوصف",
+  "Edit Historical Event": "تعديل الحدث التاريخي",
+  "Add New Historical Event": "إضافة حدث تاريخي جديد",
+  "Delete Member": "حذف عضو",
+  "Are you sure you want to delete this member? This action cannot be undone.": "هل أنت متأكد أنك تريد حذف هذا العضو؟ لا يمكن التراجع عن هذا الإجراء.",
+  "Pick start date": "اختر تاريخ البداية",
+  "Pick end date": "اختر تاريخ الانتهاء",
+  "Image URL": "رابط الصورة",
+  "Image Preview": "معاينة الصورة",
+  "Preview": "معاينة",
+  "Save Changes": "حفظ التغييرات",
+  "Add Event": "إضافة حدث",
+  "User Name": "اسم المستخدم",
+  "Position": "المنصب",
+  "Job": "الوظيفة",
+  "Avatar URL": "رابط الصورة الرمزية",
+  "Social Media": "وسائل التواصل الاجتماعي",
+  "Social Network Name (e.g., Facebook)": "اسم الشبكة الاجتماعية (مثل: فيسبوك)",
+  "Social Network URL": "رابط الشبكة الاجتماعية",
+  "Add Social Media Link": "إضافة رابط وسيلة تواصل اجتماعي",
+  "Add Member": "إضافة عضو",
+  "Search members...": "بحث في الأعضاء...",
+  "Add New Member": "إضافة عضو جديد",
+  "No team members yet": "لا يوجد أعضاء في الفريق بعد",
+  "Start by adding the first team member": "ابدأ بإضافة أول عضو في الفريق",
+  "Add First Member": "إضافة أول عضو",
+  "No results found": "لم يتم العثور على نتائج",
+  "No results matching search": "لا توجد نتائج مطابقة للبحث",
+  "Member": "عضو",
+  "job": "الوظيفة",
+  "Edit Member": "تعديل عضو",
+  "Create New Member": "إنشاء عضو جديد",
+  "Cards List": "قائمة البطاقات",
+  "Manage your educational cards here.": "قم بإدارة بطاقاتك التعليمية هنا.",
+  "cards": "البطاقات",
+  "Add New Card": "إضافة بطاقة جديدة",
+  "Search cards...": "بحث في البطاقات...",
+  "The Card": "البطاقة",
+  "Cover Image": "صورة الغلاف",
+  "Edit Card": "تعديل البطاقة",
+  "Theme": "السمة",
+  "Select Theme": "اختر السمة",
+  "Main Image": "الصورة الرئيسية",
+  "Main Image Preview": "معاينة الصورة الرئيسية",
+  "Cover Preview": "معاينة الغلاف",
+  "Add Card": "إضافة بطاقة",
+  "Post saved successfully": "تم حفظ المنشور بنجاح",
+  "Are you sure you want to delete this Post? This action cannot be undone.": "هل أنت متأكد أنك تريد حذف هذا المنشور؟ لا يمكن التراجع عن هذا الإجراء.",
+  "Edit TV Program": "تعديل البرنامج التلفزيوني",
+  "Add New TV Program": "إضافة برنامج تلفزيوني جديد",
+  "Enter program title": "أدخل عنوان البرنامج",
+  "Enter program description": "أدخل وصف البرنامج",
+  "Enter writer name": "أدخل اسم الكاتب",
+  "Program Image": "صورة البرنامج",
+  "Add Program": "إضافة برنامج",
+  "News deleted successfully": "تم حذف الخبر بنجاح",
+  "News": "الأخبار",
+  "Search News...": "بحث في الأخبار...",
+  "Add News": "إضافة خبر",
+  "Loading...": "جارٍ التحميل...",
+  "programs": "البرامج",
+  "Page": "الصفحة",
+  "Date": "التاريخ",
+  "Loading TV programs...": "جارٍ تحميل البرامج التلفزيونية...",
+  "No TV programs found matching your search.": "لم يتم العثور على برامج تلفزيونية مطابقة لبحثك.",
+  "No TV programs available.": "لا توجد برامج تلفزيونية متاحة.",
+  "results": "النتائج",
+  "Add TV Program": "إضافة برنامج تلفزيوني",
+  "Confirm Delete": "تأكيد الحذف",
+  "Discover Weekly Moments, Photos": "اكتشف لحظات وصور الأسبوع",
+  "— all in one place.": "— جميعها في مكان واحد.",
+  "Stay connected with highlights, inspiring stories, and community updates every week.": "ابقَ على تواصل مع أبرز اللحظات، القصص الملهمة، وتحديثات المجتمع أسبوعياً.",
+  "Explore Guided Reading": "استكشف القراءة الموجهة",
+  "— curated for you.": "— مُختارة لك.",
+  "Dive into inspiring readings and thoughtful insights every week.": "استمتع بقراءات ملهمة وأفكار قيّمة كل أسبوع.",
+  "Browse Cards & Photos": "تصفح البطاقات والصور",
+  "— captured weekly.": "— يتم التقاطها أسبوعياً.",
+  "Visual snapshots that highlight stories, people, and places.": "لقطات بصرية تسلط الضوء على القصص، الأشخاص، والأماكن.",
+  "Play": "تشغيل",
+  "Previous slide": "الشريحة السابقة",
+  "Next slide": "الشريحة التالية",
+  "STARTING AT": "ابتداءً من",
+  "This Week’s Top 5": "أفضل 5 لهذا الأسبوع",
+  "See more": "عرض المزيد",
+  "Report: Community Gathering": "تقرير: التجمع المجتمعي",
+  "6:00 AM": "06:00 صباحاً",
+  "SEPT 02": "02 سبتمبر",
+  "Community": "المجتمع",
+  "AR / EN": "عربي / إنجليزي",
+  "Alexander Bastian": "ألكسندر باستيان",
+  "Session Photo": "صورة الجلسة",
+  "Start with Small Steps, Inspire Big Change": "ابدأ بخطوات صغيرة، وألهم تغييراً كبيراً",
+  "Anas Daas": "أنس دعاس",
+  "This Week’s Full Highlight": "أبرز أحداث هذا الأسبوع كاملة",
+  "1:20": "1:20",
+  "Community Activity": "نشاط مجتمعي",
+  "25:00": "25:00",
+  "Unit Video": "فيديو الوحدة",
+  "This Weekly Moments": "لحظات هذا الأسبوع",
+  "Stay updated with this week’s top moments, from community gatherings to global highlights.": "تابع أهم لحظات هذا الأسبوع، من التجمعات المجتمعية إلى أبرز الأحداث العالمية.",
+  "This Week’s Photos": "صور هذا الأسبوع",
+  "A visual snapshot of the week — photos that highlight stories, people, and places.": "لمحة بصرية عن هذا الأسبوع — صور تسلط الضوء على القصص، الأشخاص، والأماكن.",
+  "This Week’s Guided Reading": "القراءة الموجهة لهذا الأسبوع",
+  "Dive into this week’s guided readings — inspiring stories, thoughtful articles, and meaningful reflections curated for you.": "استمتع بقراءات هذا الأسبوع الموجهة — قصص ملهمة، مقالات عميقة، وتأملات ذات معنى مختارة لك.",
+  "This Week’s Full Videos": "فيديوهات هذا الأسبوع الكاملة",
+  "Watch the full videos of the week — complete stories, in-depth talks, and powerful highlights brought to life on screen.": "شاهد الفيديوهات الكاملة لهذا الأسبوع — قصص مكتملة، محادثات معمقة، ولحظات مؤثرة معروضة على الشاشة.",
+  "This Week’s Unit Videos": "فيديوهات الوحدات لهذا الأسبوع",
+  "Watch this week’s featured videos — stories, reports, and highlights captured in motion.": "شاهد الفيديوهات المميزة لهذا الأسبوع — قصص، تقارير، وأبرز اللحظات الملتقطة بالصورة والحركة.",
+  "Subscribe": "اشترك الآن"
 }
