--- a/src/i18n/locales/ch/translation.json
+++ b/src/i18n/locales/ch/translation.json
@@ -278,5 +278,127 @@
   "All Videos": "所有影片",
   "Add Video": "新增影片",
   "MAIN": "主要",
-  "Settings": "設定"
+  "Settings": "設定",
+  "Company History": "公司歷史",
+  "Manage your company's historical events and milestones": "管理公司歷史事件與里程碑",
+  "events": "事件",
+  "Add New Event": "新增事件",
+  "No Historical Events": "沒有歷史事件",
+  "Start by adding your first event in the company's history": "從新增公司歷史上的第一個事件開始",
+  "Add Your First Event": "新增第一個事件",
+  "No Results Found": "沒有找到結果",
+  "No results found for": "未找到相關結果：",
+  "Clear Search": "清除搜尋",
+  "Image and Title": "圖片與標題",
+  "Time Period": "時間區間",
+  "Description": "描述",
+  "Edit Historical Event": "編輯歷史事件",
+  "Add New Historical Event": "新增歷史事件",
+  "Delete Member": "刪除成員",
+  "Are you sure you want to delete this member? This action cannot be undone.": "確定要刪除此成員嗎？此操作無法撤銷。",
+  "Pick start date": "選擇開始日期",
+  "Pick end date": "選擇結束日期",
+  "Image URL": "圖片網址",
+  "Image Preview": "圖片預覽",
+  "Preview": "預覽",
+  "Save Changes": "儲存變更",
+  "Add Event": "新增事件",
+  "User Name": "使用者名稱",
+  "Position": "職位",
+  "Job": "工作",
+  "Avatar URL": "頭像網址",
+  "Social Media": "社群媒體",
+  "Social Network Name (e.g., Facebook)": "社群名稱（例如：Facebook）",
+  "Social Network URL": "社群網址",
+  "Add Social Media Link": "新增社群連結",
+  "Add Member": "新增成員",
+  "Search members...": "搜尋成員...",
+  "Add New Member": "新增成員",
+  "No team members yet": "目前沒有團隊成員",
+  "Start by adding the first team member": "從新增第一位團隊成員開始",
+  "Add First Member": "新增第一位成員",
+  "No results found": "沒有找到結果",
+  "No results matching search": "沒有符合搜尋的結果",
+  "Member": "成員",
+  "job": "工作",
+  "Edit Member": "編輯成員",
+  "Create New Member": "建立新成員",
+  "Cards List": "卡片清單",
+  "Manage your educational cards here.": "在此管理您的教育卡片。",
+  "cards": "卡片",
+  "Add New Card": "新增卡片",
+  "Search cards...": "搜尋卡片...",
+  "The Card": "卡片",
+  "Cover Image": "封面圖片",
+  "Edit Card": "編輯卡片",
+  "Theme": "主題",
+  "Select Theme": "選擇主題",
+  "Main Image": "主要圖片",
+  "Main Image Preview": "主要圖片預覽",
+  "Cover Preview": "封面預覽",
+  "Add Card": "新增卡片",
+  "Post saved successfully": "文章已成功儲存",
+  "Are you sure you want to delete this Post? This action cannot be undone.": "確定要刪除此文章嗎？此操作無法撤銷。",
+  "Edit TV Program": "編輯電視節目",
+  "Add New TV Program": "新增電視節目",
+  "Enter program title": "輸入節目標題",
+  "Enter program description": "輸入節目描述",
+  "Enter writer name": "輸入作者姓名",
+  "Program Image": "節目圖片",
+  "Add Program": "新增節目",
+  "News deleted successfully": "新聞已成功刪除",
+  "News": "新聞",
+  "Search News...": "搜尋新聞...",
+  "Add News": "新增新聞",
+  "Loading...": "載入中...",
+  "programs": "節目",
+  "Page": "頁面",
+  "Date": "日期",
+  "Loading TV programs...": "正在載入電視節目...",
+  "No TV programs found matching your search.": "未找到符合您搜尋的電視節目。",
+  "No TV programs available.": "目前沒有可用的電視節目。",
+  "results": "結果",
+  "Add TV Program": "新增電視節目",
+  "Confirm Delete": "確認刪除",
+  "Discover Weekly Moments, Photos": "探索每週時刻與照片",
+  "— all in one place.": "— 全部集中在一個地方。",
+  "Stay connected with highlights, inspiring stories, and community updates every week.": "每週與亮點、啟發人心的故事和社群更新保持聯繫。",
+  "Explore Guided Reading": "探索導讀內容",
+  "— curated for you.": "— 為您精選。",
+  "Dive into inspiring readings and thoughtful insights every week.": "每週沉浸於啟發性的閱讀與深刻見解。",
+  "Browse Cards & Photos": "瀏覽卡片與照片",
+  "— captured weekly.": "— 每週精選拍攝。",
+  "Visual snapshots that highlight stories, people, and places.": "視覺快照，突顯故事、人與地點。",
+  "Play": "播放",
+  "Previous slide": "上一張",
+  "Next slide": "下一張",
+  "STARTING AT": "起始於",
+  "This Week’s Top 5": "本週前五名",
+  "See more": "查看更多",
+  "Report: Community Gathering": "報導：社群聚會",
+  "6:00 AM": "上午6:00",
+  "SEPT 02": "9月2日",
+  "Community": "社群",
+  "AR / EN": "阿文 / 英文",
+  "Alexander Bastian": "Alexander Bastian",
+  "Session Photo": "會議照片",
+  "Start with Small Steps, Inspire Big Change": "從小步開始，激發大改變",
+  "Anas Daas": "Anas Daas",
+  "This Week’s Full Highlight": "本週完整焦點",
+  "1:20": "1:20",
+  "Weekly Feature": "每週特輯",
+  "Community Activity": "社群活動",
+  "25:00": "25:00",
+  "Unit Video": "單元影片",
+  "This Weekly Moments": "本週時刻",
+  "Stay updated with this week’s top moments, from community gatherings to global highlights.": "隨時掌握本週的重要時刻，從社群聚會到全球焦點。",
+  "This Week’s Photos": "本週照片",
+  "A visual snapshot of the week — photos that highlight stories, people, and places.": "本週的視覺快照 — 捕捉故事、人物與地點的照片。",
+  "This Week’s Guided Reading": "本週導讀",
+  "Dive into this week’s guided readings — inspiring stories, thoughtful articles, and meaningful reflections curated for you.": "深入本週的導讀 — 精選啟發人心的故事、深思熟慮的文章和有意義的反思。",
+  "This Week’s Full Videos": "本週完整影片",
+  "Watch the full videos of the week — complete stories, in-depth talks, and powerful highlights brought to life on screen.": "觀看本週完整影片 — 完整的故事、深入的演講，以及震撼人心的焦點內容。",
+  "This Week’s Unit Videos": "本週單元影片",
+  "Watch this week’s featured videos — stories, reports, and highlights captured in motion.": "觀看本週的精選影片 — 捕捉故事、報導與焦點的動態呈現。",
+  "Subscribe": "訂閱"
 }
