--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -280,5 +280,127 @@
   "All Videos": "All Videos",
   "Add Video": "Add Video",
   "Settings": "Settings",
-  "MAIN": "MAIN"
+  "MAIN": "MAIN",
+  "Company History": "Company History",
+  "Manage your company's historical events and milestones": "Manage your company's historical events and milestones",
+  "events": "events",
+  "Add New Event": "Add New Event",
+  "No Historical Events": "No Historical Events",
+  "Start by adding your first event in the company's history": "Start by adding your first event in the company's history",
+  "Add Your First Event": "Add Your First Event",
+  "No Results Found": "No Results Found",
+  "No results found for": "No results found for",
+  "Clear Search": "Clear Search",
+  "Image and Title": "Image and Title",
+  "Time Period": "Time Period",
+  "Description": "Description",
+  "Edit Historical Event": "Edit Historical Event",
+  "Add New Historical Event": "Add New Historical Event",
+  "Delete Member": "Delete Member",
+  "Are you sure you want to delete this member? This action cannot be undone.": "Are you sure you want to delete this member? This action cannot be undone.",
+  "Pick start date": "Pick start date",
+  "Pick end date": "Pick end date",
+  "Image URL": "Image URL",
+  "Image Preview": "Image Preview",
+  "Preview": "Preview",
+  "Save Changes": "Save Changes",
+  "Add Event": "Add Event",
+  "User Name": "User Name",
+  "Position": "Position",
+  "Job": "Job",
+  "Avatar URL": "Avatar URL",
+  "Social Media": "Social Media",
+  "Social Network Name (e.g., Facebook)": "Social Network Name (e.g., Facebook)",
+  "Social Network URL": "Social Network URL",
+  "Add Social Media Link": "Add Social Media Link",
+  "Add Member": "Add Member",
+  "Search members...": "Search members...",
+  "Add New Member": "Add New Member",
+  "No team members yet": "No team members yet",
+  "Start by adding the first team member": "Start by adding the first team member",
+  "Add First Member": "Add First Member",
+  "No results found": "No results found",
+  "No results matching search": "No results matching search",
+  "Member": "Member",
+  "job": "job",
+  "Edit Member": "Edit Member",
+  "Create New Member": "Create New Member",
+  "Cards List": "Cards List",
+  "Manage your educational cards here.": "Manage your educational cards here.",
+  "cards": "cards",
+  "Add New Card": "Add New Card",
+  "Search cards...": "Search cards...",
+  "The Card": "The Card",
+  "Cover Image": "Cover Image",
+  "Edit Card": "Edit Card",
+  "Theme": "Theme",
+  "Select Theme": "Select Theme",
+  "Main Image": "Main Image",
+  "Main Image Preview": "Main Image Preview",
+  "Cover Preview": "Cover Preview",
+  "Add Card": "Add Card",
+  "Post saved successfully": "Post saved successfully",
+  "Are you sure you want to delete this Post? This action cannot be undone.": "Are you sure you want to delete this Post? This action cannot be undone.",
+  "Edit TV Program": "Edit TV Program",
+  "Add New TV Program": "Add New TV Program",
+  "Enter program title": "Enter program title",
+  "Enter program description": "Enter program description",
+  "Enter writer name": "Enter writer name",
+  "Program Image": "Program Image",
+  "Add Program": "Add Program",
+  "News deleted successfully": "News deleted successfully",
+  "News": "News",
+  "Search News...": "Search News...",
+  "Add News": "Add News",
+  "Loading...": "Loading...",
+  "programs": "programs",
+  "Page": "Page",
+  "Date": "Date",
+  "Loading TV programs...": "Loading TV programs...",
+  "No TV programs found matching your search.": "No TV programs found matching your search.",
+  "No TV programs available.": "No TV programs available.",
+  "results": "results",
+  "Add TV Program": "Add TV Program",
+  "Confirm Delete": "Confirm Delete",
+  "Discover Weekly Moments, Photos": "Discover Weekly Moments, Photos",
+  "— all in one place.": "— all in one place.",
+  "Stay connected with highlights, inspiring stories, and community updates every week.": "Stay connected with highlights, inspiring stories, and community updates every week.",
+  "Explore Guided Reading": "Explore Guided Reading",
+  "— curated for you.": "— curated for you.",
+  "Dive into inspiring readings and thoughtful insights every week.": "Dive into inspiring readings and thoughtful insights every week.",
+  "Browse Cards & Photos": "Browse Cards & Photos",
+  "— captured weekly.": "— captured weekly.",
+  "Visual snapshots that highlight stories, people, and places.": "Visual snapshots that highlight stories, people, and places.",
+  "Play": "Play",
+  "Previous slide": "Previous slide",
+  "Next slide": "Next slide",
+  "STARTING AT": "STARTING AT",
+  "This Week’s Top 5": "This Week’s Top 5",
+  "See more": "See more",
+  "Report: Community Gathering": "Report: Community Gathering",
+  "6:00 AM": "6:00 AM",
+  "SEPT 02": "SEPT 02",
+  "Community": "Community",
+  "AR / EN": "AR / EN",
+  "Alexander Bastian": "Alexander Bastian",
+  "Session Photo": "Session Photo",
+  "Start with Small Steps, Inspire Big Change": "Start with Small Steps, Inspire Big Change",
+  "Anas Daas": "Anas Daas",
+  "This Week’s Full Highlight": "This Week’s Full Highlight",
+  "1:20": "1:20",
+  "Weekly Feature": "Weekly Feature",
+  "Community Activity": "Community Activity",
+  "25:00": "25:00",
+  "Unit Video": "Unit Video",
+  "This Weekly Moments": "This Weekly Moments",
+  "Stay updated with this week’s top moments, from community gatherings to global highlights.": "Stay updated with this week’s top moments, from community gatherings to global highlights.",
+  "This Week’s Photos": "This Week’s Photos",
+  "A visual snapshot of the week — photos that highlight stories, people, and places.": "A visual snapshot of the week — photos that highlight stories, people, and places.",
+  "This Week’s Guided Reading": "This Week’s Guided Reading",
+  "Dive into this week’s guided readings — inspiring stories, thoughtful articles, and meaningful reflections curated for you.": "Dive into this week’s guided readings — inspiring stories, thoughtful articles, and meaningful reflections curated for you.",
+  "This Week’s Full Videos": "This Week’s Full Videos",
+  "Watch the full videos of the week — complete stories, in-depth talks, and powerful highlights brought to life on screen.": "Watch the full videos of the week — complete stories, in-depth talks, and powerful highlights brought to life on screen.",
+  "This Week’s Unit Videos": "This Week’s Unit Videos",
+  "Watch this week’s featured videos — stories, reports, and highlights captured in motion.": "Watch this week’s featured videos — stories, reports, and highlights captured in motion.",
+  "Subscribe": "Subscribe"
 }
