--- a/src/i18n/locales/tr/translation.json
+++ b/src/i18n/locales/tr/translation.json
@@ -255,5 +255,127 @@
   "Update Profile": "Profili Güncelle",
   "Edit Profile": "Profili Düzenle",
   "Save Password": "Şifreyi Kaydet",
-  "Add Watchlist": "İzleme Listesi Ekle"
+  "Add Watchlist": "İzleme Listesi Ekle",
+  "Company History": "Şirket Geçmişi",
+  "Manage your company's historical events and milestones": "Şirketinizin tarihî olaylarını ve kilometre taşlarını yönetin",
+  "events": "etkinlikler",
+  "Add New Event": "Yeni Etkinlik Ekle",
+  "No Historical Events": "Tarihî etkinlik yok",
+  "Start by adding your first event in the company's history": "Şirket geçmişine ilk etkinliği ekleyerek başlayın",
+  "Add Your First Event": "İlk Etkinliği Ekle",
+  "No Results Found": "Sonuç bulunamadı",
+  "No results found for": "Şunun için sonuç bulunamadı:",
+  "Clear Search": "Aramayı Temizle",
+  "Image and Title": "Görsel ve Başlık",
+  "Time Period": "Zaman Aralığı",
+  "Description": "Açıklama",
+  "Edit Historical Event": "Tarihî Etkinliği Düzenle",
+  "Add New Historical Event": "Yeni Tarihî Etkinlik Ekle",
+  "Delete Member": "Üyeyi Sil",
+  "Are you sure you want to delete this member? This action cannot be undone.": "Bu üyeyi silmek istediğinize emin misiniz? Bu işlem geri alınamaz.",
+  "Pick start date": "Başlangıç tarihini seçin",
+  "Pick end date": "Bitiş tarihini seçin",
+  "Image URL": "Görsel URL'si",
+  "Image Preview": "Görsel Önizlemesi",
+  "Preview": "Önizleme",
+  "Save Changes": "Değişiklikleri Kaydet",
+  "Add Event": "Etkinlik Ekle",
+  "User Name": "Kullanıcı Adı",
+  "Position": "Pozisyon",
+  "Job": "İş",
+  "Avatar URL": "Avatar URL'si",
+  "Social Media": "Sosyal Medya",
+  "Social Network Name (e.g., Facebook)": "Sosyal Ağ Adı (ör. Facebook)",
+  "Social Network URL": "Sosyal Ağ URL'si",
+  "Add Social Media Link": "Sosyal Medya Bağlantısı Ekle",
+  "Add Member": "Üye Ekle",
+  "Search members...": "Üye ara...",
+  "Add New Member": "Yeni Üye Ekle",
+  "No team members yet": "Henüz takım üyesi yok",
+  "Start by adding the first team member": "İlk takım üyesini ekleyerek başlayın",
+  "Add First Member": "İlk Üyeyi Ekle",
+  "No results found": "Sonuç bulunamadı",
+  "No results matching search": "Aramayla eşleşen sonuç bulunamadı",
+  "Member": "Üye",
+  "job": "iş",
+  "Edit Member": "Üyeyi Düzenle",
+  "Create New Member": "Yeni Üye Oluştur",
+  "Cards List": "Kart Listesi",
+  "Manage your educational cards here.": "Eğitim kartlarınızı burada yönetin.",
+  "cards": "kartlar",
+  "Add New Card": "Yeni Kart Ekle",
+  "Search cards...": "Kart ara...",
+  "The Card": "Kart",
+  "Cover Image": "Kapak Görseli",
+  "Edit Card": "Kartı Düzenle",
+  "Theme": "Tema",
+  "Select Theme": "Tema Seç",
+  "Main Image": "Ana Görsel",
+  "Main Image Preview": "Ana Görsel Önizlemesi",
+  "Cover Preview": "Kapak Önizlemesi",
+  "Add Card": "Kart Ekle",
+  "Post saved successfully": "Gönderi başarıyla kaydedildi",
+  "Are you sure you want to delete this Post? This action cannot be undone.": "Bu gönderiyi silmek istediğinize emin misiniz? Bu işlem geri alınamaz.",
+  "Edit TV Program": "TV Programını Düzenle",
+  "Add New TV Program": "Yeni TV Programı Ekle",
+  "Enter program title": "Program başlığını girin",
+  "Enter program description": "Program açıklamasını girin",
+  "Enter writer name": "Yazar adını girin",
+  "Program Image": "Program Görseli",
+  "Add Program": "Program Ekle",
+  "News deleted successfully": "Haber başarıyla silindi",
+  "News": "Haberler",
+  "Search News...": "Haber ara...",
+  "Add News": "Haber Ekle",
+  "Loading...": "Yükleniyor...",
+  "programs": "programlar",
+  "Page": "Sayfa",
+  "Date": "Tarih",
+  "Loading TV programs...": "TV programları yükleniyor...",
+  "No TV programs found matching your search.": "Aramanızla eşleşen TV programı bulunamadı.",
+  "No TV programs available.": "Kullanılabilir TV programı yok.",
+  "results": "sonuçlar",
+  "Add TV Program": "TV Programı Ekle",
+  "Confirm Delete": "Silmeyi Onayla",
+  "Discover Weekly Moments, Photos": "Haftalık Anları ve Fotoğrafları Keşfedin",
+  "— all in one place.": "— hepsi tek bir yerde.",
+  "Stay connected with highlights, inspiring stories, and community updates every week.": "Her hafta öne çıkanlar, ilham verici hikayeler ve topluluk güncellemeleriyle bağlantıda kalın.",
+  "Explore Guided Reading": "Yönlendirilmiş Okumayı Keşfedin",
+  "— curated for you.": "— sizin için seçildi.",
+  "Dive into inspiring readings and thoughtful insights every week.": "Her hafta ilham verici okumalar ve derinlemesine düşüncelerle dalın.",
+  "Browse Cards & Photos": "Kartları ve Fotoğrafları İnceleyin",
+  "— captured weekly.": "— haftalık olarak yakalandı.",
+  "Visual snapshots that highlight stories, people, and places.": "Hikayeleri, insanları ve yerleri öne çıkaran görsel kareler.",
+  "Play": "Oynat",
+  "Previous slide": "Önceki slayt",
+  "Next slide": "Sonraki slayt",
+  "STARTING AT": "Başlangıç",
+  "This Week’s Top 5": "Bu Haftanın İlk 5'i",
+  "See more": "Daha fazla gör",
+  "Report: Community Gathering": "Rapor: Topluluk Buluşması",
+  "6:00 AM": "06:00",
+  "SEPT 02": "02 Eylül",
+  "Community": "Topluluk",
+  "AR / EN": "AR / EN",
+  "Alexander Bastian": "Alexander Bastian",
+  "Session Photo": "Oturum Fotoğrafı",
+  "Start with Small Steps, Inspire Big Change": "Küçük Adımlarla Başla, Büyük Değişime İlham Ver",
+  "Anas Daas": "Anas Daas",
+  "This Week’s Full Highlight": "Bu Haftanın Tüm Öne Çıkanları",
+  "1:20": "1:20",
+  "Weekly Feature": "Haftalık Özellik",
+  "Community Activity": "Topluluk Etkinliği",
+  "25:00": "25:00",
+  "Unit Video": "Birim Videosu",
+  "This Weekly Moments": "Bu Haftanın Anları",
+  "Stay updated with this week’s top moments, from community gatherings to global highlights.": "Topluluk buluşmalarından küresel gelişmelere kadar bu haftanın öne çıkan anlarıyla güncel kalın.",
+  "This Week’s Photos": "Bu Haftanın Fotoğrafları",
+  "A visual snapshot of the week — photos that highlight stories, people, and places.": "Haftanın görsel özeti — hikayeleri, insanları ve yerleri öne çıkaran fotoğraflar.",
+  "This Week’s Guided Reading": "Bu Haftanın Yönlendirilmiş Okuması",
+  "Dive into this week’s guided readings — inspiring stories, thoughtful articles, and meaningful reflections curated for you.": "Bu haftanın yönlendirilmiş okumalarına dalın — sizin için seçilmiş ilham verici hikayeler, düşündürücü makaleler ve anlamlı yansımalar.",
+  "This Week’s Full Videos": "Bu Haftanın Tüm Videoları",
+  "Watch the full videos of the week — complete stories, in-depth talks, and powerful highlights brought to life on screen.": "Haftanın tüm videolarını izleyin — tam hikayeler, derinlemesine konuşmalar ve ekrana yansıtılmış güçlü öne çıkanlar.",
+  "This Week’s Unit Videos": "Bu Haftanın Birim Videoları",
+  "Watch this week’s featured videos — stories, reports, and highlights captured in motion.": "Bu haftanın öne çıkan videolarını izleyin — hikayeler, raporlar ve hareketle yakalanan öne çıkanlar.",
+  "Subscribe": "Abone Ol"
 }
