i18n: update ar/ch/en/tr translations; videos: refine CustomyoutubeVideo; layout: adjust Sidebar; deps: sync package-lock

--- a/src/i18n/locales/ar/translation.json
+++ b/src/i18n/locales/ar/translation.json
@@ -421,5 +421,17 @@
   "Watch the full videos of the week — complete stories, in-depth talks, and powerful highlights brought to life on screen.": "شاهد الفيديوهات الكاملة لهذا الأسبوع — قصص مكتملة، محادثات معمقة، ولحظات مؤثرة معروضة على الشاشة.",
   "This Week’s Unit Videos": "فيديوهات الوحدات لهذا الأسبوع",
   "Watch this week’s featured videos — stories, reports, and highlights captured in motion.": "شاهد الفيديوهات المميزة لهذا الأسبوع — قصص، تقارير، وأبرز اللحظات الملتقطة بالصورة والحركة.",
-  "Subscribe": "اشترك الآن"
+  "Subscribe": "اشترك الآن",
+  "Filter": "تصفية",
+  "Write a reply...": "اكتب ردًا...",
+  "pause": "توقف",
+  "No data available": "لا توجد بيانات متاحة",
+  "Share this article": "شارك هذه المقالة",
+  "If you like this article share it with your friends.": "إذا أعجبتك هذه المقالة، شاركها مع أصدقائك.",
+  "Link copied to clipboard!": "تم نسخ الرابط إلى الحافظة!",
+  "Open main menu": "فتح القائمة الرئيسية",
+  "Navigation": "التنقل",
+  "Quick Access": "الوصول السريع",
+  "Browse Our Top Courses": "تصفح أفضل دوراتنا",
+  "This Week's Good Effect Cards": "بطاقات التأثير الجيد لهذا الأسبوع"
 }
