--- a/src/i18n/locales/ch/translation.json
+++ b/src/i18n/locales/ch/translation.json
@@ -400,5 +400,17 @@
   "Watch the full videos of the week — complete stories, in-depth talks, and powerful highlights brought to life on screen.": "觀看本週完整影片 — 完整的故事、深入的演講，以及震撼人心的焦點內容。",
   "This Week’s Unit Videos": "本週單元影片",
   "Watch this week’s featured videos — stories, reports, and highlights captured in motion.": "觀看本週的精選影片 — 捕捉故事、報導與焦點的動態呈現。",
-  "Subscribe": "訂閱"
+  "Subscribe": "訂閱",
+  "Filter": "篩選",
+  "Write a reply...": "寫下回覆...",
+  "pause": "暫停",
+  "No data available": "沒有可用的數據",
+  "Share this article": "分享這篇文章",
+  "If you like this article share it with your friends.": "如果你喜歡這篇文章，請與你的朋友分享。",
+  "Link copied to clipboard!": "連結已複製到剪貼簿！",
+  "Open main menu": "打開主菜單",
+  "Navigation": "導航",
+  "Quick Access": "快速訪問",
+  "Browse Our Top Courses": "瀏覽我們的熱門課程",
+  "This Week's Good Effect Cards": "本週的良好效果卡片"
 }
