--- a/src/i18n/locales/tr/translation.json
+++ b/src/i18n/locales/tr/translation.json
@@ -377,5 +377,17 @@
   "Watch the full videos of the week — complete stories, in-depth talks, and powerful highlights brought to life on screen.": "Haftanın tüm videolarını izleyin — tam hikayeler, derinlemesine konuşmalar ve ekrana yansıtılmış güçlü öne çıkanlar.",
   "This Week’s Unit Videos": "Bu Haftanın Birim Videoları",
   "Watch this week’s featured videos — stories, reports, and highlights captured in motion.": "Bu haftanın öne çıkan videolarını izleyin — hikayeler, raporlar ve hareketle yakalanan öne çıkanlar.",
-  "Subscribe": "Abone Ol"
+  "Subscribe": "Abone Ol",
+  "Filter": "Filtrele",
+  "Write a reply...": "Bir yanıt yaz...",
+  "pause": "duraklat",
+  "No data available": "Veri yok",
+  "Share this article": "Bu makaleyi paylaş",
+  "If you like this article share it with your friends.": "Bu makaleyi beğendiyseniz, arkadaşlarınızla paylaşın.",
+  "Link copied to clipboard!": "Bağlantı panoya kopyalandı!",
+  "Open main menu": "Ana menüyü aç",
+  "Navigation": "Navigasyon",
+  "Quick Access": "Hızlı Erişim",
+  "Browse Our Top Courses": "En İyi Kurslarımızı Gözden Geçirin",
+  "This Week's Good Effect Cards": "Bu Haftanın İyi Etki Kartları"
 }
